--- a/palette.html
+++ b/palette.html
@@ -14,90 +14,93 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-    <body>
-      <header>
-        <nav>
-            <i class="fa-solid fa-location-dot" style="color: #353535;"></i>
-            <input class="loc_search" type="text" placeholder="Paris, Belleville">
-        </nav>
-        <div class="logo">
-            <img src="./images/logo/ohmyfood.png" alt="Logo de ohmyfood" />
-        </div>
-    </header>
-    <div class="main-container">
-    <section class="explorer">
-        <h1>Réservez le menu qui vous convient</h1>
-        <h2>Découvrez des restaurants d’exception, sélectionnés par nos soins.</h2>
-        <button>Explorer nos restaurants</button>
-    </section>
-    <section class="tuto">
-        <h1>Fonctionnement</h1>
-        <article class="card-list">
-            <div class="card">
-                <div class = "chiffre">1</div>
-                <i class="fa-solid fa-mobile-screen-button" style="color: #7e7e7e;"></i>
-                <h3>Choisissez un restaurant</h3>
-            </div>
-            <div class="card">
-                <div class = "chiffre">2</div>
-                <i class="fa-solid fa-list-ul" style="color: #7e7e7e;"></i>
-                <h3>Composez votre menu</h3>
-            </div>
-            <div class="card">
-                <div class = "chiffre">3</div>
-                <i class="fa-solid fa-store" style="color:#9356DC"></i>
-                <h3>Dégustez au restaurant</h3>
-            </div>
-        </article>
-    </section>
-    <section class="restaurants">
-        <h1>Restaurants</h1> 
-        <article class="card-list">
-           <div class="card-restau"> <a href="palette.html">
-                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Repas du restaurant La palette du goût" >
-                <span class="badge">Nouveau</span> 
-                    <div class="card_text">
-                        <h1>La palette du goût</h1>
-                        <h2>Ménilmontant</h2>
-                    </div>
-                </a>
-                <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
-                
-            </div>
-            <div class="card-restau"><a href="noteenchantee.html">
-                <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Repas du restaurant La note enchantée" >
-                <span class="badge">Nouveau</span> 
-                    <div class="card_text">
-                        <h1>La note enchantée</h1>
-                        <h2>Charonne</h2>
-                    </div>
-                </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
-            </div>
-            <div class="card-restau"><a href="francaise.html">
-                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Repas du restaurant A la française" >
-                    <div class="card_text">
-                        <h1>À la française</h1>
-                        <h2>Cité Rouge</h2>
-                    </div>
-                </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
-            </div>
-            <div class="card-restau"><a href="delice.html">
-                <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Repas du restaurant Le délice des sens" >
-                    <div class="card_text">
-                        <h1>Le délice des sens</h1>
-                        <h2>Folie-Méricourt</h2>
-                    </div>
-                </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
-            </div>
-        </article>
-    </section>
+</head>
+<body>
+<div class="main-container">
+  <header>
+    <div class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="Logo de ohmyfood" />
+    </div>
+    <div class="retour"><a href="index.html"><i class="fa-solid fa-arrow-left fa-xl" style="color: #353535;"></i></a></div>
+  </header>
+  <div class="main-container">
+    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+    <img class = "image-restau" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Repas du restaurant La palette du goût">
+  <section class="menu">
+    <div class="menu-title">
+      La palette du goût
+    </div>
+    <div class="repas">
+      <h1>
+        Entrées
+        <div class="ligne"></div>
+      </h1>
+      <div class = "plat">
+        <h2>Fricassée d'escargots</h2>
+        <p>Au piment d'Espelette </p>
+        <div class="prix">25€</div>
+      </div>
+      <div class = "plat">
+        <h2>Foie gras de canard mi-cuit</h2>
+        <p>Et ses copeaux de truffe noire</p>
+        <div class="prix">35€</div>
+      </div>
+      <div class = "plat">
+        <h2>Œuf au plat</h2>
+        <p>Assaisonné à la truffe sur lit de caviar</p>
+        <div class="prix">20€</div>
+      </div>
+    </div>
+    <div class="repas">
+      <h1>
+        Plats
+        <div class="ligne"></div>
+      </h1>
+      <div class = "plat">
+        <h2>Filet de bœuf aux herbes</h2>
+        <p>Accompagné de sa ribambelle de légumes</p>
+        <div class="prix">40€</div>
+      </div>
+      <div class = "plat">
+        <h2>Parmentier de queue de bœuf</h2>
+        <p>À la truffe noire sur sa purée de panais</p>
+        <div class="prix">35€</div>
+      </div>
+      <div class = "plat">
+        <h2>Filet de turbot</h2>
+        <p>Aux agrumes</p>
+        <div class="prix">44€</div>
+      </div>
+    </div>
+    <div class="repas">
+      <h1>
+        Desserts
+        <div class="ligne"></div>
+      </h1>
+      <div class = "plat">
+        <h2>Paris-Brest</h2>
+        <p>Revisité</p>
+        <div class="prix">18€</div>
+      </div>
+      <div class = "plat">
+        <h2>Macaron au chocolat d'exception </h2>
+        <p>Et glace à la vanille de Madagascar </p>
+        <div class="prix">22€</div>
+      </div>
+      <div class = "plat">
+        <h2>Mousse au chocolat </h2>
+        <p>Au piment d'Espelette et à la truffe noire</p>
+        <div class="prix">23€</div>
+      </div>
+    </div>
+    <div class = "commander"><button>Commander</button></div>
+  </section>
 </div>
-    <footer>
+<footer>
         <ul class = "footer-list">
             <li><svg class="logo" viewBox="0 0 196 34" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13.932 7.956C17.196 7.956 19.596 8.61599 21.132 9.936C22.692 11.256 23.472 12.984 23.472 15.12C23.472 15.84 23.376 16.644 23.184 17.532C22.728 19.5 21.876 21.228 20.628 22.716C19.38 24.18 17.844 25.32 16.02 26.136C14.22 26.928 12.264 27.324 10.152 27.324C6.81599 27.324 4.34399 26.664 2.73599 25.344C1.15199 24 0.359985 22.224 0.359985 20.016C0.359985 19.272 0.455985 18.444 0.647985 17.532C1.10399 15.66 1.96799 14.004 3.23999 12.564C4.53599 11.1 6.10799 9.972 7.95599 9.18C9.82799 8.364 11.82 7.956 13.932 7.956ZM13.824 11.16C13.32 11.16 12.78 11.616 12.204 12.528C11.652 13.416 10.992 15.108 10.224 17.604C9.45599 20.1 9.07199 21.852 9.07199 22.86C9.07199 23.388 9.15599 23.748 9.32399 23.94C9.49199 24.108 9.71999 24.192 10.008 24.192C10.512 24.24 11.028 23.808 11.556 22.896C12.108 21.984 12.792 20.208 13.608 17.568C14.352 15.24 14.724 13.548 14.724 12.492C14.724 11.988 14.64 11.64 14.472 11.448C14.328 11.256 14.112 11.16 13.824 11.16Z"/>
