feature(add): added css animations on one page

--- a/delice.html
+++ b/delice.html
@@ -28,7 +28,8 @@
     <div class="retour"><a href="index.html"><i class="fa-solid fa-arrow-left fa-xl" style="color: #353535;"></i></a></div>
   </header>
   <div class="main-container">
-    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+    <i class="heart fa-regular fa-heart" style="color: #000000;"></i>
+    <i class="full-heart fa-solid fa-heart" style="color: #000000;"></i>
     <img class = "image-restau" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Repas du restaurant Le délice des sens" >
   <section class="menu">
     <div class="menu-title">
@@ -39,63 +40,92 @@
         Entrées
         <div class="ligne"></div>
       </h1>
+      <div class="card-plat">
       <div class = "plat">
         <h2>Tartare de thon</h2>
         <p>Assaisonné au yuzu</p>
         <div class="prix">25€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Bouchée de homard croustillant </h2>
-        <p>Et sa farandole de petits légumesr</p>
+        <p>Et sa farandole de petits légumes</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Velouté de cèpes </h2>
         <p>Aux truffes</p>
         <div class="prix">20€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
     </div>
+     </div>
     <div class="repas">
       <h1>
         Plats
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Poulet rôti aux herbes de Provence </h2>
         <p>Et sa crème de truffe</p>
         <div class="prix">40€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Langouste rôtie </h2>
         <p>Et ses légumes de saison</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Côte de bœuf Angus </h2>
         <p>Et sa purée de panais</p>
         <div class="prix">44€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+
     </div>
     <div class="repas">
       <h1>
         Desserts
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Farandole de desserts</h2>
         <p>Du chef</p>
         <div class="prix">18€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Crème brulée </h2>
         <p>Revisité</p>
         <div class="prix">22€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Tiramisu </h2>
         <p>À la noisette</p>
         <div class="prix">23€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div> 
+    </div>
+
     </div>
     <div class = "commander"><button>Commander</button></div>
   </section>
