--- a/francaise.html
+++ b/francaise.html
@@ -28,7 +28,8 @@
     <div class="retour"><a href="index.html"><i class="fa-solid fa-arrow-left fa-xl" style="color: #353535;"></i></a></div>
   </header>
   <div class="main-container">
-    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+    <i class="heart fa-regular fa-heart" style="color: #000000;"></i>
+    <i class="full-heart fa-solid fa-heart" style="color: #000000;"></i>
     <img class = "image-restau" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Repas du restaurant A la française" >
   <section class="menu">
     <div class="menu-title">
