--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                         <h2>Ménilmontant</h2>
                     </div>
                 </a>
-                <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+                <i class="heart fa-regular fa-heart"></i>
+                <i class="full-heart fa-solid fa-heart"></i>
                 
             </div>
             <div class="card-restau"><a href="noteenchantee.html">
@@ -74,7 +75,8 @@
                         <h2>Charonne</h2>
                     </div>
                 </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+                    <i class="heart fa-regular fa-heart"></i>
+                    <i class="full-heart fa-solid fa-heart"></i>
             </div>
             <div class="card-restau"><a href="francaise.html">
                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Repas du restaurant A la française" >
@@ -83,7 +85,8 @@
                         <h2>Cité Rouge</h2>
                     </div>
                 </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+                    <i class="heart fa-regular fa-heart"></i>
+                    <i class="full-heart fa-solid fa-heart"></i>
             </div>
             <div class="card-restau"><a href="delice.html">
                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Repas du restaurant Le délice des sens" >
@@ -92,7 +95,8 @@
                         <h2>Folie-Méricourt</h2>
                     </div>
                 </a>
-                    <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i>
+                    <i class="heart fa-regular fa-heart"></i>
+                    <i class="full-heart fa-solid fa-heart"></i>
             </div>
         </article>
     </section>
