feature(add): added all css animations to all pages

--- a/palette.html
+++ b/palette.html
@@ -30,7 +30,7 @@
   <div class="main-container">
     <i class="heart fa-regular fa-heart" style="color: #000000;"></i>
     <i class="full-heart fa-solid fa-heart" style="color: #000000;"></i>
-    <img class = "image-restau" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Repas du restaurant La palette du goût">
+    <img class = "image-restau" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Repas du restaurant La palette du goût" >
   <section class="menu">
     <div class="menu-title">
       La palette du goût
@@ -40,63 +40,92 @@
         Entrées
         <div class="ligne"></div>
       </h1>
+      <div class="card-plat">
       <div class = "plat">
         <h2>Fricassée d'escargots</h2>
         <p>Au piment d'Espelette </p>
         <div class="prix">25€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Foie gras de canard mi-cuit</h2>
         <p>Et ses copeaux de truffe noire</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Œuf au plat</h2>
         <p>Assaisonné à la truffe sur lit de caviar</p>
         <div class="prix">20€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
     </div>
+     </div>
     <div class="repas">
       <h1>
         Plats
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Filet de bœuf aux herbes</h2>
         <p>Accompagné de sa ribambelle de légumes</p>
         <div class="prix">40€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Parmentier de queue de bœuf</h2>
         <p>À la truffe noire sur sa purée de panais</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Filet de turbot</h2>
         <p>Aux agrumes</p>
         <div class="prix">44€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+
     </div>
     <div class="repas">
       <h1>
         Desserts
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Paris-Brest</h2>
         <p>Revisité</p>
         <div class="prix">18€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
-        <h2>Macaron au chocolat d'exception </h2>
-        <p>Et glace à la vanille de Madagascar </p>
+        <h2>Macaron au chocolat d'exception</h2>
+        <p>Et glace à la vanille de Madagascar</p>
         <div class="prix">22€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Mousse au chocolat </h2>
         <p>Au piment d'Espelette et à la truffe noire</p>
         <div class="prix">23€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div> 
+    </div>
+
     </div>
     <div class = "commander"><button>Commander</button></div>
   </section>
