--- a/francaise.html
+++ b/francaise.html
@@ -40,63 +40,92 @@
         Entrées
         <div class="ligne"></div>
       </h1>
+      <div class="card-plat">
       <div class = "plat">
         <h2>Tartare de poulpe acidulé</h2>
         <p>Aux zestes d'orange</p>
         <div class="prix">25€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Velouté de légumes d'antan</h2>
         <p>Carotte, panais, topinambour</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Soupe à l'oignon</h2>
         <p>Revisitée</p>
         <div class="prix">20€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
     </div>
+     </div>
     <div class="repas">
       <h1>
         Plats
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Coquilles Saint-Jacques</h2>
         <p>Accompagnées d'une purée de panais</p>
         <div class="prix">40€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Magret de canard</h2>
         <p>Et parmentier de pommes de terre</p>
         <div class="prix">35€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Pigeonneau d’Ille-et-Vilaine</h2>
         <p>Sur son lit de gnocchis aux légumes</p>
         <div class="prix">44€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+
     </div>
     <div class="repas">
       <h1>
         Desserts
         <div class="ligne"></div>
       </h1>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Pétales de violettes glacés</h2>
         <p>Et purée de noisettes</p>
         <div class="prix">18€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
         <h2>Fondant au chocolat</h2>
         <p>Revisité</p>
         <div class="prix">22€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
+    </div>
+    <div class="card-plat">
       <div class = "plat">
-        <h2>Millefeuille croustillant</h2>
+        <h2>Millefeuille croustillant </h2>
         <p>Myrtilles et pâte d’amande</p>
         <div class="prix">23€</div>
       </div>
+      <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div> 
+    </div>
+
     </div>
     <div class = "commander"><button>Commander</button></div>
   </section>
