feature(add): added missing animations

--- a/francaise.html
+++ b/francaise.html
@@ -35,7 +35,7 @@
     <div class="menu-title">
       À la française
     </div>
-    <div class="repas">
+    <div class="repas" id = "entree">
       <h1>
         Entrées
         <div class="ligne"></div>
@@ -65,7 +65,7 @@
       <div class="check"><i class="fa-solid fa-circle-check fa-lg" style="color: #ffffff;"></i></div>
     </div>
      </div>
-    <div class="repas">
+    <div class="repas" id = "plats">
       <h1>
         Plats
         <div class="ligne"></div>
@@ -96,7 +96,7 @@
     </div>
 
     </div>
-    <div class="repas">
+    <div class="repas" id = "desserts">
       <h1>
         Desserts
         <div class="ligne"></div>
