--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="loader-page">
+    <div class="loader"></div></div>
     <header>
       <nav>
         <i class="fa-solid fa-location-dot" style="color: #353535"></i>
@@ -35,7 +37,7 @@
         <h2>
           Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </h2>
-        <button>Explorer nos restaurants</button>
+        <a href = "#resto"><button>Explorer nos restaurants</button></a>
       </section>
       <section class="tuto">
         <h1>Fonctionnement</h1>
@@ -61,7 +63,7 @@
         </article>
       </section>
       <section class="restaurants">
-        <h1>Restaurants</h1>
+        <h1 id = "resto">Restaurants</h1>
         <article class="card-list">
           <div class="card-restau">
             <a href="palette.html">
