--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -47,7 +47,7 @@
         />
         <section class="menu">
           <div class="menu-title">La note enchantée</div>
-          <div class="repas">
+          <div class="repas" id = "entree">
             <h1>
               Entrées
               <div class="ligne"></div>
@@ -105,7 +105,7 @@
               </div>
             </div>
           </div>
-          <div class="repas">
+          <div class="repas" id = "plats">
             <h1>
               Plats
               <div class="ligne"></div>
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="repas">
+          <div class="repas" id = "desserts">
             <h1>
               Desserts
               <div class="ligne"></div>
