--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -37,7 +34,7 @@
         <h2>
           Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </h2>
-        <a href = "#resto"><button>Explorer nos restaurants</button></a>
+        <button onclick="window.location.href='#resto';">Explorer nos restaurants</button>
       </section>
       <section class="tuto">
         <h1>Fonctionnement</h1>
@@ -160,7 +157,7 @@
             />
           </svg>
         </li>
-        <span class="footer-list-bold">
+        <div class="footer-list-bold">
           <li>
             <i class="fa-solid fa-utensils" style="color: #ffffff"></i>Proposer
             un restaurant
@@ -172,7 +169,7 @@
             ></i
             >Devenir partenaire
           </li>
-        </span>
+        </div>
         <li>Mentions légales</li>
         <li>Contact</li>
       </ul>
