--- a/index.html
+++ b/index.html
@@ -157,19 +157,17 @@
             />
           </svg>
         </li>
-        <div class="footer-list-bold">
-          <li>
+          <li class="footer-list-bold">
             <i class="fa-solid fa-utensils" style="color: #ffffff"></i>Proposer
             un restaurant
           </li>
-          <li>
+          <li class="footer-list-bold">
             <i
               class="fa-solid fa-handshake-angle fa-xs"
               style="color: #ffffff"
             ></i
             >Devenir partenaire
           </li>
-        </div>
         <li>Mentions légales</li>
         <li>Contact</li>
       </ul>
