--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             >Devenir partenaire
           </li>
         <li>Mentions légales</li>
-        <li>Contact</li>
+        <li><a href = "mailto:abc@example.com?subject = Contact">Contact</a></li>
       </ul>
     </footer>
   </body>
