--- a/noteenchantee.html
+++ b/noteenchantee.html
@@ -214,7 +214,7 @@
             <li class="footer-list-bold"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</li>
             <li class="footer-list-bold"><i class="fa-solid fa-handshake-angle fa-xs" style="color: #ffffff;"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Contact</li>
+            <li><a href = "mailto:abc@example.com?subject = Contact">Contact</a></li>
         </ul>
     </footer>
     </div>
