fixed icon positioning

--- a/index.html
+++ b/index.html
@@ -163,10 +163,9 @@
           </li>
           <li class="footer-list-bold">
             <i
-              class="fa-solid fa-handshake-angle fa-xs"
+              class="fa-solid fa-handshake-angle"
               style="color: #ffffff"
-            ></i
-            >Devenir partenaire
+            ></i>Devenir partenaire
           </li>
         <li>Mentions légales</li>
         <li><a href = "mailto:abc@example.com?subject = Contact">Contact</a></li>
